--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "15.3.1",
     "react-native": "^0.32.1",
     "react-native-actionsheet": "^2.0.3",
+    "react-native-activity-view": "^0.2.10",
+    "react-native-admob": "^1.1.5",
     "react-native-camera-roll-picker": "^1.1.7",
     "react-native-i18n": "^0.1.1",
     "react-native-navbar": "^1.5.0",
