--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-native-activity-view": "^0.2.10",
     "react-native-admob": "^1.1.5",
     "react-native-camera-roll-picker": "^1.1.7",
+    "react-native-device-info": "^0.9.5",
+    "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-i18n": "^0.1.1",
     "react-native-navbar": "^1.5.0",
     "react-native-passcode-auth": "git+https://github.com/domoconnell/react-native-passcode-auth.git",
