--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,9 +126,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
+    compile project(':react-native-google-analytics-bridge')
     compile project(':react-native-share')
+    compile project(':react-native-admob')
     compile project(':react-native-vector-icons')
-    compile project(':react-native-i18n')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
