--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-admob": "^1.1.5",
     "react-native-camera-roll-picker": "^1.1.8",
     "react-native-collapsible": "^0.7.0",
+    "react-native-device-detection": "^0.1.3",
     "react-native-device-info": "^0.9.5",
     "react-native-gesture-password": "^0.2.0",
     "react-native-google-analytics-bridge": "^3.1.0",
