--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,6 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": 0,
     "consistent-return": 0,
-    "global-require": 0,
-    "class-methods-use-this": 0
+    "global-require": 0
   }
 }
