--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "build-android": "npm run release-android; osascript -e 'display notification \"DONE!\" with title \"Android built\"'",
     "release-android": "cd android && ./gradlew assembleRelease && cd ..",
-    "clean-android": "cd android && ./gradlew clean"
+    "clean-android": "cd android && ./gradlew clean && cd .."
   },
   "repository": {
     "type": "git",
@@ -34,11 +34,11 @@
     "react-native-device-info": "^0.9.5",
     "react-native-gesture-password": "^0.2.0",
     "react-native-google-analytics-bridge": "^3.1.0",
-    "react-native-navbar": "^1.5.1",
+    "react-native-navbar": "^1.5.4",
     "react-native-passcode-auth": "git+https://github.com/domoconnell/react-native-passcode-auth.git",
     "react-native-photo-browser": "^0.2.2",
     "react-native-router-flux": "^3.35.0",
-    "react-native-share": "^1.0.13",
+    "react-native-share": "^1.0.14",
     "react-native-simple-store": "^1.1.0",
     "react-native-sound": "^0.8.3",
     "react-native-tableview-simple": "^0.13.0",
