--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react": "15.3.1",
     "react-native": "^0.33.0",
     "react-native-admob": "^1.1.5",
-    "react-native-camera-roll-picker": "^1.1.8",
+    "react-native-camera-roll-picker": "github:7kfpun/react-native-camera-roll-picker",
     "react-native-collapsible": "^0.7.0",
     "react-native-device-detection": "^0.1.3",
     "react-native-device-info": "^0.9.5",
     "react-native-gesture-password": "^0.2.0",
     "react-native-google-analytics-bridge": "^3.1.0",
     "react-native-navbar": "^1.5.4",
-    "react-native-passcode-auth": "git+https://github.com/domoconnell/react-native-passcode-auth.git",
+    "react-native-passcode-auth": "github:pkwak-sf/react-native-passcode-auth",
     "react-native-photo-browser": "github:ksti/react-native-photo-browser",
     "react-native-router-flux": "^3.35.0",
     "react-native-share": "^1.0.14",
